--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.22.0",
     "@tailwindcss/postcss": "^4.0.9",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
