--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.9",
     "passport": "^0.7.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "xlsx": "^0.18.5"
   }
 }
