--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,8 @@
     "nodemon": "^3.1.9",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "streamifier": "^0.1.1",
     "xlsx": "^0.18.5"
   }
