--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@google/generative-ai": "^0.22.0",
     "@tailwindcss/postcss": "^4.0.9",
+    "aos": "^2.3.4",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -22,7 +23,9 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.30.0",
+    "react-toastify": "^11.0.5",
     "socket.io-client": "^4.8.1",
+    "sonner": "^2.0.3",
     "tailwindcss": "^4.0.9",
     "tailwindcss-animate": "^1.0.7"
   },
