--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.22.0",
+    "@headlessui/react": "^2.2.2",
+    "@heroicons/react": "^2.2.0",
     "@tailwindcss/postcss": "^4.0.9",
     "aos": "^2.3.4",
     "axios": "^1.8.4",
