--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.6.3",
     "lucide-react": "^0.487.0",
+    "openai": "^4.103.0",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
