build command update

--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
-    "build": "vite build"
+    "build": "npm run build"
   },
   "author": "Akshay",
   "license": "ISC",
@@ -31,8 +31,5 @@
     "socket.io-client": "^4.8.1",
     "streamifier": "^0.1.1",
     "xlsx": "^0.18.5"
-  },
-  "devDependencies": {
-    "vite": "^6.3.5"
   }
 }
