--- a/backend/package.json
+++ b/backend/package.json
@@ -5,8 +5,7 @@
   "type": "module",
   "scripts": {
     "start": "node src/index.js",
-    "dev": "nodemon src/index.js",
-    "build": "npm run build"
+    "dev": "nodemon src/index.js"
   },
   "author": "Akshay",
   "license": "ISC",
