--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,7 @@
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "streamifier": "^0.1.1",
+    "vercel": "^42.2.0",
     "xlsx": "^0.18.5"
   }
 }
